<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grigio">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/selezioneTipoAccount_logo"
        android:layout_width="205dp"
        android:layout_height="203dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/scelteIniziali_accesibilitàLogo"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:srcCompat="@drawable/logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selezioneTipoAccount_motto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans"
        android:text="@string/scelteIniziali_motto1"
        android:textColor="@color/blu"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/selezioneTipoAccount_logo"
        app:layout_constraintStart_toStartOf="@+id/selezioneTipoAccount_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selezioneTipoAccount_motto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/scelteIniziali_motto2"
        android:textColor="@color/arancione"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/selezioneTipoAccount_motto1"
        app:layout_constraintStart_toEndOf="@+id/selezioneTipoAccount_motto1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selezioneTipoAccount_motto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/fira_sans"
        android:text="@string/scelteIniziali_motto3"
        android:textColor="@color/blu"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/selezioneTipoAccount_motto2"
        app:layout_constraintStart_toEndOf="@+id/selezioneTipoAccount_motto2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selezioneTipoAccount_nomeApp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/scelteIniziali_nomeApp1"
        android:textColor="@color/blu"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/selezioneTipoAccount_logo"
        app:layout_constraintTop_toBottomOf="@+id/selezioneTipoAccount_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selezioneTipoAccount_nomeApp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/scelteIniziali_nomeApp2"
        android:textColor="@color/arancione"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/selezioneTipoAccount_nomeApp1"
        app:layout_constraintStart_toEndOf="@+id/selezioneTipoAccount_nomeApp1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/selezioneTipoAccount_messaggioCorpo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/selezioneTipoAccount_messaggioCorpo"
        android:textColor="@color/blu"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/selezioneTipoAccount_logo"
        app:layout_constraintStart_toStartOf="@+id/selezioneTipoAccount_logo"
        app:layout_constraintTop_toBottomOf="@+id/selezioneTipoAccount_nomeApp1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selezioneTipoAccount_pulsanteCompratore"
        style="@style/BottoneArancioneGrande"
        android:layout_width="260dp"
        android:layout_marginTop="32dp"
        android:text="@string/selezioneTipoAccount_pulsanteCompratore"
        app:layout_constraintEnd_toEndOf="@+id/selezioneTipoAccount_messaggioCorpo"
        app:layout_constraintStart_toStartOf="@+id/selezioneTipoAccount_messaggioCorpo"
        app:layout_constraintTop_toBottomOf="@+id/selezioneTipoAccount_messaggioCorpo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selezioneTipoAccount_pulsanteVenditore"
        style="@style/BottoneBluGrande"
        android:layout_marginTop="32dp"
        android:text="@string/selezioneTipoAccount_pulsanteVenditore"
        app:layout_constraintStart_toStartOf="@+id/selezioneTipoAccount_pulsanteCompratore"
        app:layout_constraintTop_toBottomOf="@+id/selezioneTipoAccount_pulsanteCompratore" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selezioneTipoAccount_pulsanteOspite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:clickable="true"
        android:fontFamily="@font/fira_sans"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/selezioneTipoAccount_pulsanteOspite"
        android:textColor="@color/bluLink"
        android:textSize="20sp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="@+id/selezioneTipoAccount_pulsanteVenditore"
        app:layout_constraintStart_toStartOf="@+id/selezioneTipoAccount_pulsanteVenditore"
        app:layout_constraintTop_toBottomOf="@+id/selezioneTipoAccount_pulsanteVenditore" />

</androidx.constraintlayout.widget.ConstraintLayout>