<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/rettangolo">

    <TextView
        android:id="@+id/infoPassword_corpoMessaggio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/fira_sans"
        android:text="@string/infoPassword_messaggioCorpo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoPassword_titolo" />

    <TextView
        android:id="@+id/infoPassword_titolo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fira_sans_bold"
        android:text="@string/infoPassword_titolo"
        android:textColor="@color/blu"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/infoPassword_pulsanteChiudi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:contentDescription="@string/infoPassword_accessibilitàChiudi"
        app:layout_constraintBottom_toBottomOf="@+id/infoPassword_titolo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/infoPassword_titolo"
        app:layout_constraintTop_toTopOf="@+id/infoPassword_titolo"
        app:srcCompat="@drawable/icona_chiudi" />

</androidx.constraintlayout.widget.ConstraintLayout>